# chip8

./: .gitignore  pyproject.toml
src/: chip8.py  consts.py  cpu.py  disassembler.py  display.py  display_keyboard.py  main.py  memory.py  utils.py
